--- a/config-single-client-dev.yml
+++ b/config-single-client-dev.yml
@@ -15,3 +15,11 @@ spring:
   jpa:
     show-sql: true
 girl: 18
+
+data:
+  env: localhost-dev-edit888
+  user:
+    username: fengzheng-dev999
+    password: password-dev
+    
+    
