--- a/config-single-client-pro.yml
+++ b/config-single-client-pro.yml
@@ -26,3 +26,14 @@ feign:
         connectTimeout: 5000
         readTimeout: 5000
         loggerLevel: basic  
+
+
+data:
+  env: localhost-pro-edit999
+  user:
+    username: fengzheng-pro
+    password: password-pro
+server:
+  port: 3304
+  
+  
