--- a/config-single-client1-dev.yml
+++ b/config-single-client1-dev.yml
@@ -1,1 +1,8 @@
 
+data:
+  env: localhost-dev-edit888
+  user:
+    username: fengzheng-dev999
+    password: password-dev
+server:
+  port: 3303   
